--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abay Earn - Smart Earnings</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- Telegram Ads SDK (Adsgram) -->
     <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
@@ -99,9 +99,10 @@
         </button>
     </nav>
 
-    <script src="js/telegram.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/ads.js"></script>
-    <script src="js/app.js"></script>
+    <script src="telegram.js"></script>
+    <script src="api.js"></script>
+    <script src="ads.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
+
