--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - Abay Earn</title>
-    <link rel="stylesheet" href="css/admin.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="admin.css">
+    <script src="https://telegram.org/telegram-web-app.js"></script>
 </head>
 <body>
     <div class="admin-container">
@@ -140,8 +140,9 @@
         </button>
     </nav>
 
-    <script src="js/telegram.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/admin.js"></script>
+    <script src="telegram.js"></script>
+    <script src="api.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
+
