--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- Telegram Ads SDK (Adsgram) -->
-    <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
+    <script src="https://sad.adsgram.ai/sad.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -105,4 +105,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
